# PFC

./: README.md
gazebo/models/nao_inet/: model.config  model.sdf  nao.urdf
gazebo/models/nao_inet/.svn/: wc.db
gazebo/models/nao_partial/: model-partial.sdf  model.config
gazebo/plugins/nao/: CMakeLists.txt  ballgreen.cc  ballred.cc  pose3d.h  poseleftankle.cc  poseleftankle.h  poseleftelbow.cc  poseleftelbow.cc~  poseleftelbow.h  poselefthip.cc  poselefthip.cc~  poselefthip.h  poseleftknee.cc  poseleftknee.cc~  poseleftknee.h  poseleftshoulder.cc  poseleftshoulder.h  poseneck.cc  poseneck.h  poseneckspeed.cc  poserightankle.cc  poserightankle.cc~  poserightankle.h  poserightelbow.cc  poserightelbow.cc~  poserightelbow.h  poserighthip.cc  poserighthip.h  poserightknee.cc  poserightknee.h  poserightknee.h~  poserightshoulder.cc  poserightshoulder.cc~  poserightshoulder.h  poserightshoulder.h~  rightankle.cc  rightankle.cfg  rightankle.h  rightankle.h~  walking.cc  (+1 more)
gazebo/plugins/nao/.svn/: wc.db
interfaces/slice/jderobot/: walker.ice
nao_control/: CMakeLists.txt  cam_sensor_bottom.cfg  cam_sensor_top.cfg  index.txt  main.cpp~  nao.world  nao_control  nao_control.cfg  raked_search.cpp  raked_search.h  shared.cpp  shared.cpp.save  shared.h  walker.cfg  walker.cfg.old  walking.cfg
nao_control/control/: control.cpp  control.cpp~  control.h  control.h~  threadcontrol.cpp  threadcontrol.h
nao_control/gui/: LCDNumber.h  glWidget.cpp  glWidget.h  gui.cpp  gui.cpp~  gui.h  gui2.cpp  gui2.h  threadgui.cpp  threadgui.h
nao_control/tmp/: nao.world  naoworld.world~
